# obi-gspeak

./: gspeak.py
templates/: README.md  meson.build  project.yaml
templates/debian/: control  rules
templates/src/: @PROJECT@.cpp
